# todo-rs

./: .gitignore  Cargo.toml  LICENSE  readme.md  rstodo.md  todo-rs.db  todo_config.toml
examples/: demo1.rs
src/: about.rs  cmd.rs  cmd_handler.rs  command.rs  help.rs  init.rs  lib.rs  logger.rs  main.rs  storage.rs  target_impl.rs  task.rs  task_mod.rs  task_module.rs  task_sql.rs  todors_init.rs
src/algos/: quick_sort.rs
src/config/: config.rs  load_config.rs
src/storage/: mod.rs  save_json.rs  save_sql.rs
src/task_module/: about_task.rs  mod.rs  task_sql.rs
src/user/: login.rs  mod.rs  user.rs  user_cmd.rs  user_impl.rs  user_modules.rs
src/user_module/: about_user.rs  mod.rs  user.rs  user_cmd.rs  user_mod.rs  user_sql.rs
tests/: test_curd.rs
