[package]
name = "todo-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.37.0"
owo-colors = "4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
# comfy-table = "7.1.4"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20" }
unicode-width = "0.2.1"
textwrap = "0.16.2"
regex = "1.11.2"
rayon = "1.11.0"


# 遮蔽密码输入
# rpassword = "7.4.0"
# 配置文件库
config = "0.15.15"
#    数据库操作库
rusqlite = { version = "0.37.0", features = ["bundled"] }
#    存储配置文件
# toml = "0.9.5"

[profile.dev]
opt-level = 1  # 开发模式基础优化

[profile.release]
opt-level = 3        # 最高级别优化
lto = true           # 启用链接时优化
codegen-units = 1    # 减少代码生成单元提升优化效果
panic = "abort"      # 替换unwinding减少二进制体积
incremental = false  # 关闭增量编译（针对release）
strip = true        # 去除符号表和调试信息